030-software/fluxcd/apps/pyload/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyload
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pyload
  template:
    metadata:
      labels:
        app: pyload
        # policy.gatekeeper.sh/ignore-psp-readonlyrootfilesystem: "true"
        # policy.gatekeeper.sh/ignore-psp-pods-allowed-user-ranges: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: pyload
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: pyload
      containers:
        - name: pyload
          image: ghcr.io/home-operations/pyload-ng:0.5.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: config
              mountPath: /config
            - name: pyload
              mountPath: /defaults/pyload.cfg
              subPath: pyload.cfg
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
      volumes:
        - name: temp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: pyload
          configMap:
            defaultMode: 0644
            name: pyload
        - name: downloads
          nfs:
            server: 10.102.22.211
            path: /pyload
