030-software/fluxcd/apps/pyload/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pyload
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pyload
  type: ClusterIP
