030-software/fluxcd/apps/pyload/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pyload
  annotations:
    dashboard.${domain}/name: pyload
    dashboard.${domain}/url: https://pyload.${domain}
    dashboard.${domain}/icon: download
spec:
  hostnames:
  - pyload.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: pyload
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
